# src/backend/open-api/go/model_change_email.go
@@ -1,0 +1,39 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import "template_backend/common"
+
+type ChangeEmail struct {
+	CurrentEmail string `json:"currentEmail" validate:"required,email"`
+
+	NewEmail string `json:"newEmail" validate:"required,email"`
+}
+
+// AssertChangeEmailRequired checks if the required fields are not zero-ed
+func AssertChangeEmailRequired(obj ChangeEmail) error {
+	elements := map[string]interface{}{
+		"currentEmail": obj.CurrentEmail,
+		"newEmail":     obj.NewEmail,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertChangeEmailConstraints checks if the values respects the defined constraints
+func AssertChangeEmailConstraints(obj ChangeEmail) error {
+	return common.Validate.Struct(obj)
+}
